--- a/styles.css
+++ b/styles.css
@@ -1,102 +1,77 @@
-body {
-  padding: 0;
-  margin: 0;
+html {
+    font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  max-width: 1400px;
-  height: 100vh;
-  font-size: 1.5rem;
+html,
+body,
+section, 
+h1, 
+span {
+    padding: 0;
+    margin: 0;
 }
 
-.left {
-  background-color: black;
-  flex-grow: 1;
-  width: 100%;
-  /*   height: 100vh;
- */
-  font-family: "Spartan", sans-serif;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  color: white;
+#home {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #FFF9F1;
 }
 
-.right {
-  background-color: white;
-  text-align: center;
-  flex-grow: 2;
-  width: 100%;
-  /*   height: 100vh;
- */
-  font-family: "Spartan", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: flex start;
-  /*   justify-content: ;
- */
-  color: black;
+.central {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: .7em 0 .7em 8%;
+    color: #121B27;
 }
 
-.tag {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  font-size: 0.7rem;
-  font-family: "Raleway", sans-serif;
+.lastname {
+    flex-grow: 1;
+    background-color: #FF9900;
 }
 
-.underscore {
-  color: orange;
-  animation: blink-animation 1.3s steps(5, start) infinite;
-  -webkit-animation: blink-animation 1.3s steps(5, start) infinite;
-}
-@keyframes blink-animation {
-  to {
-    visibility: hidden;
-  }
-}
-@-webkit-keyframes blink-animation {
-  to {
-    visibility: hidden;
-  }
+.firstname,
+.lastname {
+    line-height: 110%;
+    font-size: 3.5rem;
+    font-weight: 700;
 }
 
-p {
-  margin: 0;
-  padding: 0;
+.webdeveloper,
+.copywriter {
+    font-size: 1.5em;
 }
 
-.info {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
 
-  font-size: 0.7rem;
-  font-family: "Raleway", sans-serif;
+/* *****************************ABOUT SECTION*********************************************** */
+#about {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100vh;
+    width: 100%;
+    background-color: #FFF9F1;
+
+}
+
+#headline {
+    float: right;
+    padding-right: 20%;
+    font-size: 3em;
+    font-weight: bold;
+    /* background-color: #FF9900; */
+    border-bottom: #FF9900 .3em solid;
 }
 
 .text {
-  display: inline-block;
-  align-content: center;
-}
-
-.icons {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  padding-top: 3rem;
-  font-size: 2rem;
-}
-
-.color-orange {
-  color: teal;
-}
-
-.color-teal {
-  color: blue;
+    border-left: #FF9900 .3em solid;
+    font-size: 1.5em;
+    max-width: 60%;
+    margin-left: 10%;
 }
