commented out arrow due to positioning problems

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -23,7 +23,7 @@
       font-size: 3rem;
     }
   }
-  .arrow {
+  /* .arrow {
     animation: bounce 1.3s alternate infinite;
     font-size: 8rem;
     position: relative;
@@ -35,7 +35,7 @@
     i {
       animation: bounce 1.3s alternate infinite;
     }
-  }
+  } */
 }
 
 /* KEYFRAME ANIMATIONS */
