--- a/styles/style.css
+++ b/styles/style.css
@@ -214,6 +214,19 @@ nav .nav-active {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  /* .arrow {
+    animation: bounce 1.3s alternate infinite;
+    font-size: 8rem;
+    position: relative;
+    bottom: -20rem;
+    width: 100%;
+    text-align: center;
+    z-index: 0;
+
+    i {
+      animation: bounce 1.3s alternate infinite;
+    }
+  } */
 }
 
 .home .center-content {
@@ -239,22 +252,6 @@ nav .nav-active {
 .home .center-content .descr {
   font-family: "Roboto", sans-serif;
   font-size: 3rem;
-}
-
-.home .arrow {
-  -webkit-animation: bounce 1.3s alternate infinite;
-          animation: bounce 1.3s alternate infinite;
-  font-size: 8rem;
-  position: relative;
-  bottom: -20rem;
-  width: 100%;
-  text-align: center;
-  z-index: 0;
-}
-
-.home .arrow i {
-  -webkit-animation: bounce 1.3s alternate infinite;
-          animation: bounce 1.3s alternate infinite;
 }
 
 /* KEYFRAME ANIMATIONS */
